Fixes for install

--- a/scripts/install
+++ b/scripts/install
@@ -26,7 +26,7 @@ ynh_abort_if_errors
 
 domain=$YNH_APP_ARG_DOMAIN
 path_url=$YNH_APP_ARG_PATH
-datadir=$YNH_APP_DATADIR
+datadir=$YNH_APP_ARG_DATADIR
 is_public=$YNH_APP_ARG_IS_PUBLIC
 language=$YNH_APP_ARG_LANGUAGE
 
@@ -71,7 +71,6 @@ ynh_script_progression --message="Storing installation settings..." --time --wei
 ynh_app_setting_set --app=$app --key=domain --value=$domain
 ynh_app_setting_set --app=$app --key=path --value=$path_url
 ynh_app_setting_set --app=$app --key=datadir --value=$datadir
-ynh_app_setting_set --app=$app --key=admin --value=$admin
 ynh_app_setting_set --app=$app --key=is_public --value=$is_public
 ynh_app_setting_set --app=$app --key=language --value=$language
 
@@ -157,11 +156,11 @@ ynh_script_progression --message="Configuring system user..." --time --weight=1
 
 # Create a system user
 # TODO Create user with     
-#if [ "$datadir" != "/" ]
-#then
-#
-#fi
-ynh_system_user_create --username=$app
+if [ "$datadir" != "/" ]
+	ynh_system_user_create --username=$app --home_dir=datadir
+else
+	ynh_system_user_create --username=$app
+fi
 
 #=================================================
 # PHP-FPM CONFIGURATION
