--- a/scripts/install
+++ b/scripts/install
@@ -265,7 +265,11 @@ ynh_add_systemd_config
 ### that really need such authorization.
 
 # Set permissions to app files
-chown -R root: $final_path
+chown -R $app:$app "$final_path"
+chown -R $app:$app "/var/log/$app"
+
+chmod u=rwX,g=rX,o= "$final_path"
+chmod u=rwX,g=rX,o= "/var/log/$app"
 
 #=================================================
 # SETUP LOGROTATE
