--- a/scripts/install
+++ b/scripts/install
@@ -241,7 +241,7 @@ ynh_add_systemd_config
 ### `ynh_replace_string` is used to replace a string in a file.
 ### (It's compatible with sed regular expressions syntax)
 
-### ynh_replace_string --match_string="match_string" --replace_string="replace_string" --target_file="$final_path/CONFIG_FILE"
+ynh_replace_string --match_string="<UrlBase></UrlBase>" --replace_string="<UrlBase>/$app</UrlBase>" --target_file="$final_path/data/config.xml"
 
 #=================================================
 # STORE THE CONFIG FILE CHECKSUM
