--- a/scripts/install
+++ b/scripts/install
@@ -318,9 +318,11 @@ ynh_systemd_action --service_name=$app --action="start" --log_path="/var/log/$ap
 ### `ynh_replace_string` is used to replace a string in a file.
 ### (It's compatible with sed regular expressions syntax)
 
+ynh_systemd_action --service_name=$app --action="stop"
+
 ynh_replace_string --match_string="<UrlBase></UrlBase>" --replace_string="<UrlBase>/$app</UrlBase>" --target_file="$final_path/data/config.xml"
 
-ynh_systemd_action --service_name=$app --action="restart"
+ynh_systemd_action --service_name=$app --action="start" --log_path="/var/log/$app/$app.log"
 
 #=================================================
 # SETUP FAIL2BAN
